blockchain-client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blockchain-client
  template:
    metadata:
      labels:
        app: blockchain-client
    spec:
      containers:
      - name: Przemek
        image: localhost:8081/Przemek
        ports:
        - containerPort: 8081
      - name: WSEI
        image: localhost:8082/WSEI
        ports:
        - containerPort: 8082
