blockchain-deployment-node2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-node2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockchain-node2
  template:
    metadata:
      labels:
        app: blockchain-node2
    spec:
      containers:
      - name: blockchain-node2
        image: localhost:5000/node2
        imagePullPolicy: Never
        ports:
        - containerPort: 5002  # Port, na którym działa aplikacja wewnątrz kontenera
