blockchain-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blockchain
  template:
    metadata:
      labels:
        app: blockchain
    spec:
      containers:
      - name: node1
        image: localhost:5001/node1
        ports:
        - containerPort: 5001
      - name: node2
        image: localhost:5001/node2
        ports:
        - containerPort: 5002
      - name: node3
        image: localhost:5001/node3
        ports:
        - containerPort: 5003
