blockchain-service-node2.yml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-service-node2
spec:
  selector:
    app: blockchain-node1
  ports:
    - protocol: TCP
      port: 5002  # Port zewnętrzny, który będziesz używać do dostępu z przeglądarki
      targetPort: 5002  # Numer portu kontenera
  type: LoadBalancer
