blockchain-service-node3.yml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-service-node3
spec:
  selector:
    app: blockchain-node3
  ports:
    - protocol: TCP
      port: 5003  # Port zewnętrzny, który będziesz używać do dostępu z przeglądarki
      targetPort: 5003  # Numer portu kontenera
  type: LoadBalancer
