blockchain-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-service
spec:
  selector:
    app: blockchain
  ports:
    - protocol: TCP
      port: 5001  # Port, na którym będzie dostępna usługa na zewnątrz klastra
      targetPort: 5001  # Port wewnątrz kontenera
  type: LoadBalancer  # Typ usługi - zewnętrzny dostęp
